Fix horizontal overflow bug

--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
 
 .snap-container {
     height: 100vh;
-    width: 100vw;
     overflow-y: scroll;
     scroll-snap-type: mandatory;
     scroll-snap-points-y: 100vh;
@@ -30,7 +29,6 @@ body {
 }
 
 section {
-    width: 100vw;
     height: 100vh;
     scroll-snap-align: start;
 }
